[tool.poetry]
name = "my-py-project"
version = "0.1.0"
description = ""
authors = ["AndyTwelve <andy12@tut.by>"]
readme = "README.md"
packages = [{include = "my_py_project"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", optional = true} 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
